<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="280.0dip"
    android:clickable="true"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <RelativeLayout
        android:id="@+id/google_play_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16.0dip">

        <ImageView
            android:id="@+id/google_play_icon"
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:src="@drawable/ic_googleplay" />

        <TextView
            android:id="@+id/google_play_rate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:layout_toRightOf="@id/google_play_icon"
            android:text="@string/action_about"
            android:textColor="@color/black"
            android:textSize="16.0dip" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:background="#ffdcdcdc" />

    <RelativeLayout
        android:id="@+id/share_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="16.0dip">

        <ImageView
            android:tint="@color/chocolate"
            android:id="@+id/share_icon"
            android:layout_width="32.0dip"
            android:layout_height="32.0dip"
            android:src="@drawable/ic_share_black_36dp" />

        <TextView
            android:id="@+id/shareTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:layout_toRightOf="@id/share_icon"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="16.0dip" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:background="#ffdcdcdc" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16.0dip">

        <TextView
            android:id="@+id/build_version_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/appVersionTitle"
            android:textColor="@color/black"
            android:textSize="16.0dip" />

        <TextView
            android:id="@+id/build_version_subtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:textColor="@color/black"
            android:textSize="14.0dip" />
    </LinearLayout>
</LinearLayout>