<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12.0dip"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip"
            android:paddingTop="24.0dip"
            android:text="@string/connection_mode_message"
            android:textColor="@color/black"
            android:textSize="20.0sp" />

        <RelativeLayout
            android:id="@+id/controller"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageText"
            android:background="?selectableItemBackground"
            android:paddingBottom="12.0dip"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip"
            android:paddingTop="12.0dip">

            <ImageView
                android:id="@+id/controllerImage"
                android:layout_width="36.0dip"
                android:layout_height="36.0dip"
                android:src="@drawable/ic_videogame_asset_black_48dp" />

            <TextView
                android:id="@+id/controllerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:layout_toRightOf="@id/controllerImage"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/connection_mode_controller"
                android:textColor="@color/black"
                android:textSize="18.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/switchOnOff"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/controller"
            android:background="?selectableItemBackground"
            android:paddingBottom="12.0dip"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip"
            android:paddingTop="12.0dip">

            <ImageView
                android:id="@+id/switchImage"
                android:layout_width="36.0dip"
                android:layout_height="36.0dip"
                android:src="@drawable/ic_power_settings_new_black_48dp" />

            <TextView
                android:id="@+id/switchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:layout_toRightOf="@id/switchImage"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/connection_mode_switch"
                android:textColor="@color/black"
                android:textSize="18.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/dimmer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/switchOnOff"
            android:background="?selectableItemBackground"
            android:paddingBottom="12.0dip"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip"
            android:paddingTop="12.0dip">

            <ImageView
                android:id="@+id/dimmerImage"
                android:layout_width="36.0dip"
                android:layout_height="36.0dip"
                android:src="@drawable/ic_tune_black_48dp" />

            <TextView
                android:id="@+id/dimmerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:layout_toRightOf="@id/dimmerImage"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/connection_mode_dimmer"
                android:textColor="@color/black"
                android:textSize="18.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/terminal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dimmer"
            android:background="?selectableItemBackground"
            android:paddingBottom="12.0dip"
            android:paddingLeft="24.0dip"
            android:paddingRight="24.0dip"
            android:paddingTop="12.0dip">

            <ImageView
               android:id="@+id/terminalImage"
                android:layout_width="36.0dip"
                android:layout_height="36.0dip"
                android:src="@drawable/ic_keyboard_black_48dp" />

            <TextView
                android:id="@+id/terminalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20.0dip"
                android:layout_toRightOf="@id/terminalImage"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/connection_mode_terminal"
                android:textColor="@color/black"
                android:textSize="18.0sp" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>