<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@id/appbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@id/collapsing_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorPrimaryDark"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap">

            <ImageView
                android:id="@id/backdrop"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="48.0dip"
                android:src="@mipmap/logo"
                app:layout_collapseMode="parallax"
                android:contentDescription="TODO" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="fill_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="enterAlways|scroll"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@id/mainScrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/pairedDevicesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/paired_devices"
                android:textColor="@color/colorPrimary"
                android:textSize="24.0sp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/pairedDevicesRecyclerView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pairedDevicesTextView"
                android:layout_marginTop="16.0dip"
                />

            <View
                android:id="@id/pairedSeparator"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip"
                android:layout_below="@id/pairedDevicesRecyclerView"
                android:layout_marginTop="48.0dip"
                android:background="#ffdcdcdc"
                 />

            <RelativeLayout
                android:id="@id/availableDevicesHeader"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@id/pairedSeparator"
                android:layout_marginTop="16.0dip"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@id/availableDevicesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/available_devices"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24.0sp" />

                <ProgressBar
                    android:id="@id/devicesScanProgress"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:visibility="gone"
                    android:layout_toRightOf="@id/availableDevicesTextView"
                     />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/availableDevicesRecyclerView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/availableDevicesHeader"
                android:layout_marginTop="16.0dip" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@id/bt_scan_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|right"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/se"
        app:pressedTranslationZ="12.0dip" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
